- Added missing required fields

--- a/public/minimal/index.html
+++ b/public/minimal/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Recurly.js Example: Minimal Billing Information</title>
+    <title>Recurly.js Example: Minimal Billing Information - updated</title>
     <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/config"></script>
