- Advanced tax styling

--- a/public/advanced-tax/index.html
+++ b/public/advanced-tax/index.html
@@ -7,6 +7,7 @@
     <script src="/config"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
     <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" type="text/css">
+    <link href="/minimal/style.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <style>
       select, input { display: block; }
