--- a/public/advanced-tax/index.html
+++ b/public/advanced-tax/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Recurly.js Example: Advanced VAT 2015 taxation</title>
+    <title>Recurly.js Example: Advanced VAT 2015 taxation testing</title>
     <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/config"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
     <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" type="text/css">
-    <link href="/minimal/style.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <style>
       select, input { display: block; }
