- Inserted our public API key on all examples - Disabled the bank payment type

--- a/public/3d-secure/index.html
+++ b/public/3d-secure/index.html
@@ -41,7 +41,7 @@
     </section>
     <script>
       recurly.configure({
-        publicKey: window.recurlyConfig.publicKey,
+        publicKey: 'ewr1-BGHZnZnpBJfipDo2sAL4W4',
         style: {
           all: {
             fontFamily: 'Open Sans',
