--- a/public/apple-pay/index.html
+++ b/public/apple-pay/index.html
@@ -79,7 +79,7 @@
     </section>
     <script>
       // Configure recurly.js
-      recurly.configure(window.recurlyConfig.publicKey); // Set this to your own public key
+      recurly.configure('ewr1-BGHZnZnpBJfipDo2sAL4W4'); // Set this to your own public key
 
       recurly.ready(function () {
         var button = document.querySelector('#apple-pay')
