--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       <li><a href="minimal/index.html">Minimal billing information</a></li>
       <li><a href="advanced-pricing/index.html">Advanced pricing features</a></li>
       <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
-      <li><a href="advanced-bank-account/index.html">Advanced bank account</a></li>
+      <li><a>Advanced bank account (disabled)</a></li>
       <li><a href="apple-pay/index.html">Apple Pay</a></li>
       <li><a href="paypal/index.html">PayPal</a></li>
       <li><a href="fraud-detection/recurly-kount.html">Fraud detection (Recurly and Kount direct integrations)</a></li>
