--- a/public/advanced-pricing/index.html
+++ b/public/advanced-pricing/index.html
@@ -117,7 +117,7 @@
     <script>
       // Configure recurly.js
       recurly.configure({
-        publicKey: window.recurlyConfig.publicKey, // Set this to your own public key
+        publicKey: 'ewr1-BGHZnZnpBJfipDo2sAL4W4', // Set this to your own public key
         style: {
           all: {
             fontFamily: 'Open Sans',
