--- a/public/fraud-detection/braintree.html
+++ b/public/fraud-detection/braintree.html
@@ -69,7 +69,7 @@
 
           // Configure recurly.js with the Braintree deviceData
           recurly.configure({
-            publicKey: window.recurlyConfig.publicKey, // Set this to your own public key
+            publicKey: 'ewr1-BGHZnZnpBJfipDo2sAL4W4', // Set this to your own public key
             style: {
               all: {
                 fontFamily: 'Open Sans',
